tests/fixtures/valid/nested_loop_break.c
int main() {
    int outer = 0;
    int total = 0;
    while (outer < 3) {
        int inner = 0;
        while (inner < 4) {
            inner = inner + 1;
            if (inner == 2) {
                break;
            }
            total = total + 10;
        }
        total = total + 1;
        outer = outer + 1;
    }
    return total;
}
