tests/fixtures/invalid/enum_missing_value.c
int main() {
    enum Bad { FIRST = 1, SECOND = };
    return FIRST;
}
